add sent mesaage logic

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <p id="emailResponse"></p>
                     <p id="topics">Topics:</p>
                     <button class="btn" id="btn3">Confirm</button>
+                    <div id="message" style="display: none;"></div>
                 </section>
             </div>
         </div>
